--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,8 +145,7 @@ jobs:
       - run: # run snyk test - run snyk testa
             name: snyk test
             command: |
-              snyk test --severity-threshold=low --all-projects --command=python3 --json-file-output=/root/project/test-results/snyk-scan.json --debug || true
-              snyk monitor --all-projects --command=python3
+              snyk test --severity-threshold=low --all-projects --command=python3 --json-file-output=/root/project/test-results/snyk-scan.json | snyk monitor --all-projects --command=python3
       - store_artifacts:
           path: test-results
           destination: test-results
