--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ jobs:
       - run: # run snyk test - run snyk testa
             name: snyk test
             command: |
-              snyk test --severity-threshold=low --remote-repo-url=<< pipeline.project.git_url >> --all-projects  --command=python3 --json-file-output=/root/project/test-results/snyk-scan.json || snyk monitor --remote-repo-url=<< pipeline.project.git_url >>  --all-projects --command=python3 && false
+              snyk test --severity-threshold=low --remote-repo-url=<< pipeline.project.git_url >>.git --all-projects  --command=python3 --json-file-output=/root/project/test-results/snyk-scan.json || snyk monitor --remote-repo-url=<< pipeline.project.git_url >>  --all-projects --command=python3 && false
       - store_artifacts:
           path: test-results
           destination: test-results
