data model search changed

--- a/tests/addons/TA_requirement_test/default/eventtypes.conf
+++ b/tests/addons/TA_requirement_test/default/eventtypes.conf
@@ -1,77 +1,62 @@
 ##
-## SPDX-FileCopyrightText: 2020 Splunk, Inc. <sales@splunk.com>
+## SPDX-FileCopyrightText: 2021 Splunk, Inc. <sales@splunk.com>
 ## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
 ##
 ##
 
-###### Juniper Firewall (Netscreen Firewall) ######
-[netscreen_firewall]
-search = sourcetype=netscreen*firewall
+###### Infoblox DNS ######
+[infoblox_dns]
+search = sourcetype=infoblox:dns "client" "query:"
+#network
+#resolution
+#dns
 
-[netscreen_firewall_communicate]
-search = sourcetype=netscreen*firewall action
-#tags = network communicate
+[infoblox_dns_change]
+search = sourcetype=infoblox:dns is_updating=updating
+# No tags
 
-[netscreen_firewall_translation_mac_to_ip]
-search = sourcetype=netscreen*firewall "IP address" "assigned to"
+[infoblox_dns_rpz]
+search = sourcetype=infoblox:dns "CEF:"
+#network
+#resolution
+#dns
 
-## Netscreen Authentication
-[netscreen_authentication]
-search = sourcetype=netscreen*firewall ("Local admin authentication" OR "Password authentication" OR ("Login attempt" refused) OR ("Login attempt" failed)) OR ("attempt by admin" OR "admin authentication" OR "for admin user")
-#tags = authentication
+###### Infoblox DHCP ######
+[infoblox_dhcp]
+search = sourcetype=infoblox:dhcp
+# No tags
 
-[netscreen_authentication_default]
-search = sourcetype=netscreen*firewall (netscreen_user=System OR netscreen_user=netscreen OR netscreen_user=root) ("Local admin authentication" OR "Password authentication" OR ("Login attempt" refused) OR ("Login attempt" failed))
-#tags = authentication default
+[infoblox_session_start]
+search = sourcetype=infoblox:dhcp "DHCPACK"
+#network
+#session
+#start
+#dhcp
 
-[netscreen_authentication_privileged]
-search = sourcetype=netscreen*firewall (netscreen_user=System OR netscreen_user=netscreen OR netscreen_user=root) ("attempt by admin" OR "admin authentication" OR "for admin user")
-#tags = authentication privileged
+[infoblox_session_end]
+search = sourcetype=infoblox:dhcp "DHCPRELEASE"
+#network
+#session
+#end
+#dhcp
 
-## Netscreen Network Change
-[netscreen_firewall_modify_policy]
-search = sourcetype=netscreen*firewall "system-notification-00018"
-#tags = change audit
+###### Infoblox Threatprotect #######
+[infoblox_threatprotect]
+search = sourcetype="infoblox:threatprotect" "CEF:"
+#ids
+#attack
 
-[netscreen_restart]
-search = sourcetype=netscreen*firewall "System halt-reboot by"
+###### Infoblox Audit #######
+[infoblox_network_change]
+search = sourcetype="infoblox:audit" action="restarted" OR object_type="AuthZone" OR object_type="MemberAtp" OR object_type="MemberDHCP" OR object_type="DHCPRange" OR object_type="GridDHCP" OR object_type="ResponsePolicyCnameRecord" OR object_type="Network"
+#change
+#network
 
-[netscreen_alert]
-search = sourcetype=netscreen*firewall "system-alert-" NOT "Login attempt by"
-#tags = alert
+[infoblox_account_change]
+search = sourcetype="infoblox:audit" object_attrs="login session" OR object_type="AdminMember" OR object_type="AdminGroup"
+#change
+#account
 
-###### JunOS IDP ######
-[juniper_junos_idp]
-search = (sourcetype=juniper:junos:idp OR sourcetype=juniper:junos:idp:structured)
-
-[juniper_junos_idp_attack]
-search = (sourcetype=juniper:junos:idp OR sourcetype=juniper:junos:idp:structured) ("IDP_ATTACK_LOG_EVENT*" OR "Attack log")
-#tags = attack ids
-
-###### JunOS FW ######
-[juniper_junos_firewall]
-search = (sourcetype=juniper:junos:firewall OR sourcetype=juniper:junos:firewall:structured) ("RT_FLOW" OR "PFE_FW_SYSLOG_ETH_IP" OR "ESWD_DAI_FAILED")
-#tags = network communicate
-
-[juniper_junos_firewall_utm_attack]
-search = (sourcetype=juniper:junos:firewall OR sourcetype=juniper:junos:firewall:structured) (message_tag = "AV_VIRUS_DETECTED_MT" OR message_tag = "RT_SCREEN_ICMP" OR message_tag = "RT_SCREEN_TCP" OR message_tag = "RT_SCREEN_UDP" OR message_tag = "CONTENT_FILTERING_BLOCKED_MT" OR "RT_IDS")
-#tags = attack ids
-
-[juniper_junos_firewall_utm_web]
-search = (sourcetype=juniper:junos:firewall OR sourcetype=juniper:junos:firewall:structured) (message_tag = "WEBFILTER_URL_PERMITTED" OR message_tag = "WEBFILTER_URL_BLOCKED")
-#tags = web
-
-###### JunOS AAMW ######
-[juniper_junos_aamw]
-search = sourcetype=juniper:junos:aamw:structured
-#tags = attack ids
-
-###### JunOS SECINTEL ######
-[juniper_junos_secintel]
-search = sourcetype=juniper:junos:secintel:structured
-#tags = attack ids
-
-###### JunOS SNMP ######
-[juniper_junos_change_network]
-search = sourcetype=juniper:junos:snmp OR (sourcetype=juniper:junos:firewall AND ("ESWD_STP_STATE_CHANGE_INFO" OR service_name = "rpd"))
-#tags = change network
+[infoblox_authentication]
+search = sourcetype="infoblox:audit" action="success" OR action="failure"
+#authentication
