--- a/tests/addons/TA_requirement_test/default/app.conf
+++ b/tests/addons/TA_requirement_test/default/app.conf
@@ -1,22 +1,29 @@
-[install]
-is_configured = false
-state = enabled
-build = 1607948879
-
-[launcher]
-author = Splunk, Inc.
-version = 1.5.5rfb1b492
-description = Splunk Add-on for Juniper
+##
+## SPDX-FileCopyrightText: 2021 Splunk, Inc. <sales@splunk.com>
+## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
+##
+##
 
 [ui]
-is_visible = false
-label = Splunk Add-on for Juniper
 docs_section_override = AddOns:released
+is_visible = false
+label = Splunk Add-on for Infoblox
+
+[launcher]
+author = Splunk
+description = Splunk Add-on for Infoblox
+version = 2.0.1
+
+[install]
+is_configured = false 
+state = enabled 
+build = 1
 
 [package]
-id = Splunk_TA_juniper
+id = Splunk_TA_infoblox
+check_for_updates = 1
+
 
 [id]
-name = Splunk_TA_juniper
-version = 1.5.5rfb1b492
-
+name = Splunk_TA_infoblox
+version = 2.0.1
