--- a/tests/addons/TA_requirement_test/default/tags.conf
+++ b/tests/addons/TA_requirement_test/default/tags.conf
@@ -1,63 +1,56 @@
 ##
-## SPDX-FileCopyrightText: 2020 Splunk, Inc. <sales@splunk.com>
+## SPDX-FileCopyrightText: 2021 Splunk, Inc. <sales@splunk.com>
 ## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
 ##
 ##
 
-###### Juniper Firewall (Netscreen Firewall) ######
-[eventtype=netscreen_firewall_communicate]
+###### Infoblox DNS ######
+###### CIM: Network Resolution (DNS) #####
+[eventtype=infoblox_dns]
+network = enabled
+resolution = enabled
+dns = enabled
+
+##### CIM: Network Resolution (DNS) #####
+[eventtype=infoblox_dns_rpz]
+network = enabled
+resolution = enabled
+dns = enabled
+
+###### Infoblox DHCP ######
+###### CIM: Network Sessions ######
+[eventtype=infoblox_session_start]
 network  = enabled
-communicate = enabled
+session = enabled
+start = enabled
+dhcp = enabled
 
-## Netscreen Authentication
-[eventtype=netscreen_authentication]
-authentication = enabled
+[eventtype=infoblox_session_end]
+network  = enabled
+session = enabled
+end = enabled
+dhcp = enabled
 
-[eventtype=netscreen_authentication_default]
-authentication = enabled
-default        = enabled
-
-[eventtype=netscreen_authentication_privileged]
-authentication = enabled
-privileged     = enabled
-
-## Netscreen Network Change
-[eventtype=netscreen_firewall_modify_policy]
-change = enabled
-audit = enabled
-
-## Netscreen Alert
-[eventtype=netscreen_alert]
-alert = enabled
-
-###### Juniper JunOS IDP ######
-[eventtype=juniper_junos_idp_attack]
-attack = enabled
-ids    = enabled
-
-###### Juniper JunOS FW ######
-[eventtype=juniper_junos_firewall]
-network     = enabled
-communicate = enabled
-
-[eventtype=juniper_junos_firewall_utm_attack]
+####### Infoblox Threatprotect #######
+####### CIM : Intrusion Detection #####
+[eventtype=infoblox_threatprotect]
 attack = enabled
 ids = enabled
 
-[eventtype=juniper_junos_firewall_utm_web]
-web = enabled
 
-###### Juniper JunOS AAMW ######
-[eventtype=juniper_junos_aamw]
-attack = enabled
-ids = enabled
-
-###### Juniper JunOS SECINTEL ######
-[eventtype=juniper_junos_secintel]
-attack = enabled
-ids    = enabled
-
-[eventtype=juniper_junos_change_network]
+###### Infoblox Audit ######
+###### CIM : Change.Network ######
+[eventtype=infoblox_network_change]
 change = enabled
 network = enabled
 
+###### Infoblox Audit ######
+###### CIM : Change.Account ######
+[eventtype=infoblox_account_change]
+change = enabled
+account = enabled
+
+###### Infoblox Audit ######
+###### CIM : Authentication ######
+[eventtype=infoblox_authentication]
+authentication=enabled
